# workflow_manager

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  MODULE.bazel  README.md  docker-compose.yaml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
build-tools/rules/general/: sync_source.bzl
build-tools/rules/java/: oci.bzl  open_api.bzl
build-tools/rules/postgres/: dev_server.bzl
build-tools/rules/ts/: nextjs.bzl  postcss.bzl  tailwind.bzl  vite.bzl
docs/: workflow_manager.md
infra/: rabbitmq.toml  redis.toml  workflow_manager.toml  workflow_manager_client.toml  ws_workflow_manager.toml
infra/containers/nginx_server_react/: Dockerfile  default.conf
infra/images/: static_server.dockerfile
scripts/: deploy_client.sh  deploy_wm.sh  deploy_wswm.sh  setup.sh
services/workflow_manager/: BUILD
services/workflow_manager/src/main/java/com/workflowmanager/: App.java  Greeting.java  GreetingController.java
services/workflow_manager/src/main/java/com/workflowmanager/app/: App.java  Publisher.java
services/workflow_manager/src/main/java/com/workflowmanager/app/controllers/: ActionDemo.java  HealthController.java  WorkflowAttributeController.java  WorkflowController.java  WorkflowEntityController.java  WorkflowStateController.java
services/workflow_manager/src/main/java/com/workflowmanager/app/controllers/dtos/: WorkflowAttributeResponseDTO.java  WorkflowAttributeWithDescriptionListDTO.java  WorkflowEntityThinDTO.java  WorkflowWithStatesDTO.java
services/workflow_manager/src/main/java/com/workflowmanager/app/controllers/requests/: RequestListWorkflowEntity.java  RequestNewAttribute.java  RequestNewAttributeDescription.java  RequestNewBaseEntity.java  RequestNewWorkflow.java  RequestNewWorkflowEntity.java  RequestNewWorkflowState.java  RequestSetChangeStateRule.java  RequestUpdateWorkflowConfig.java
services/workflow_manager/src/main/java/com/workflowmanager/app/controllers/responses/: ResponseAttribute.java  ResponseAttributeDescription.java  ResponseAttributeWithDescriptionList.java  ResponseBaseEntity.java  ResponseEntityChangeState.java  ResponseEntityIdsByState.java  ResponseWorkflow.java  ResponseWorkflowEntity.java  ResponseWorkflowState.java
services/workflow_manager/src/main/java/com/workflowmanager/app/core/: AuthorizationDTO.java  BaseEntity.java  ErrorUtils.java  NewBaseEntityDTO.java
services/workflow_manager/src/main/java/com/workflowmanager/app/domains/: NewWorkflowAttributeDTO.java  NewWorkflowAttributeDescriptionDTO.java  NewWorkflowDTO.java  NewWorkflowEntityDTO.java  NewWorkflowStateDTO.java  Workflow.java  WorkflowAttribute.java  WorkflowAttributeDescription.java  WorkflowAttributeDescriptionId.java  WorkflowAttributeId.java  WorkflowEntity.java  WorkflowState.java
services/workflow_manager/src/main/java/com/workflowmanager/app/domains/attribute/: WorkflowAttributeExprRule.java  WorkflowAttributeRegexRule.java  WorkflowAttributeRule.java
services/workflow_manager/src/main/java/com/workflowmanager/app/domains/state/: ChangeStateRules.java  ChangeStateRulesCEL.java  ChangeStateRulesCELParameters.java  ChangeStateRulesId.java  NewChangeStateRulesDTO.java
services/workflow_manager/src/main/java/com/workflowmanager/app/repositories/: ChangeStateRulesRepository.java  WorkflowAttributeDescriptionRepository.java  WorkflowAttributeRepository.java  WorkflowEntityRepository.java  WorkflowRepository.java  WorkflowStateRepository.java
services/workflow_manager/src/main/resources/: application-local.properties  application-openapi-gen.properties  application-openapi.properties  application.properties
services/ws_workflow_manager/: BUILD
services/ws_workflow_manager/src/main/java/com/wsworkflowmanager/app/: App.java  Greeting.java  GreetingController.java  HelloMessage.java  Receiver.java  WebSocketConfig.java
services/ws_workflow_manager/src/main/resources/: application-local.properties  application.properties
webapps/landing_page/: BUILD  package.json  tsconfig.json
webapps/landing_page/src/app/: BUILD  layout.tsx  page.tsx  x.tsx
webapps/libs/common_schemas/: BUILD  index.ts  package.json  tsconfig.json
webapps/libs/workflow_manager_api/: BUILD  index.ts  package.json
webapps/nextjs_example/: BUILD  package.json  tailwind.config.js
webapps/nextjs_example/pages/: BUILD.bazel  _app.tsx  index.tsx
webapps/nextjs_example/pages/api/: BUILD.bazel
webapps/nextjs_example/public/: BUILD.bazel
webapps/nextjs_example/styles/: BUILD.bazel
webapps/react_example/: BUILD  vite.config.mjs
webapps/react_example/src/: BUILD
webapps/workflow_manager/: .env.dev  .env.local  .env.prod  .gitignore  BUILD  components.json  dayjs.d.ts  eslint.config.mjs  index.html  main.css  package.json  tailwind.config.ts  tsconfig.json  vite-env.d.ts  vite.config.mjs
webapps/workflow_manager/src/: BUILD  main.tsx  routes.tsx
webapps/workflow_manager/src/components/: BUILD  copy-button.tsx  form-submitter.tsx  theme-provider.tsx
webapps/workflow_manager/src/components/ui/: BUILD  button.tsx  date-picker.tsx  dialog.tsx  skeleton.tsx  sonner.tsx
webapps/workflow_manager/src/components/ui/time-picker/: date-time-picker.tsx  time-picker-demo.tsx
webapps/workflow_manager/src/features/: BUILD  attributes-form.tsx  authentication-context.tsx  authentication-display.tsx  authentication-manager.tsx  change-state-rules-form.tsx  new-entity-form.tsx  new-state-form.tsx  new-workflow-form.tsx  set-config-form.tsx  state-change-options.tsx
webapps/workflow_manager/src/hooks/: use-async.ts  use-is-mobile.ts
webapps/workflow_manager/src/lib/: BUILD
webapps/workflow_manager/src/pages/workflow-manage/: BUILD  attribute-description-form.tsx  attributes-form.tsx  change-state-rules-form.tsx  desktop-manager.tsx  index.tsx  mobile-manager.tsx  new-entity-form.tsx  new-state-form.tsx  set-config-form.tsx  state-change-options.tsx
webapps/workflow_manager/src/pages/workflows/: BUILD  index.tsx  new-workflow-form.tsx
webapps/workflow_manager/src/store/: BUILD  context.tsx  workflow-store.ts
(+2 files in other folders)
