"workflow-manager"

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc4")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")
bazel_dep(name = "aspect_rules_js", version = "2.0.2")
bazel_dep(name = "aspect_rules_swc", version = "2.0.1")
bazel_dep(name = "aspect_rules_ts", version = "3.1.0")
bazel_dep(name = "aspect_rules_rollup", version = "2.0.0")
bazel_dep(name = "aspect_rules_webpack", version = "0.16.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_nodejs", version = "6.3.1")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_oci", version = "1.4.0")
bazel_dep(name = "rules_java", version = "7.11.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

bazel_dep(name = "rules_spring")
git_override(
    module_name = "rules_spring",
    remote = "https://github.com/salesforce/rules_spring",
    commit = "baf1aac63d17f87c62277b5331c08105a9d9a155",
)

# java
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.guava:guava:31.1-jre",
        "org.springframework.boot:spring-boot-loader:3.3.4",
        "org.springframework.boot:spring-boot-autoconfigure:3.3.4",
        "org.springframework.boot:spring-boot-starter-actuator:3.3.4",
        "org.springframework.boot:spring-boot-starter-logging:3.3.4",
        "org.springframework.boot:spring-boot-starter-web:3.3.4",
        "org.springframework.boot:spring-boot-loader-classic:3.3.4",
        "org.springframework.boot:spring-boot-starter-data-jpa:3.3.4",
        "org.springframework.boot:spring-boot-starter-validation:3.3.4",
        "org.springframework.boot:spring-boot-starter-websocket:3.3.4",
        "org.springframework.boot:spring-boot-starter-amqp:3.3.4",
        "org.springframework.boot:spring-boot-starter-data-redis:3.3.4",
        "org.zalando:problem-spring-web-starter:0.29.1",
        "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0",
        "jakarta.persistence:jakarta.persistence-api:3.1.0",
        "jakarta.json:jakarta.json-api:2.1.3",
        "jakarta.json.bind:jakarta.json.bind-api:3.0.1",
        "com.h2database:h2:2.3.232",
        "org.hibernate:hibernate-core:6.6.1.Final",
        "org.hibernate:hibernate-entitymanager:5.6.15.Final",
        "org.postgresql:postgresql:42.7.4",
        "dev.cel:cel:0.8.0",
        "io.hypersistence:hypersistence-utils-hibernate-60:3.8.3",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.1",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
    ],
)
use_repo(maven, "maven")

# js
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.18.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
# TODO: use docker file to create a smaller image instead of
# using distroless/java21 directly
oci.pull(
    name = "distroless_java",
    digest = "sha256:b2875ad56cdbf0b7f7d6b9ae1f9c205f3cec8cdb8791465b1321527f1c1e8559",
    image = "gcr.io/distroless/java21",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_java")
oci.pull(
    name = "nginx",
    image = "docker.io/library/nginx:alpine",
    platforms = [
        "linux/amd64",
    ],
    reproducible = False,
)
use_repo(oci, "nginx")
