load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "pages",
    srcs = [
        "_app.tsx",
        "index.tsx",
    ],
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "//webapps/nextjs_example:tsconfig",
    visibility = ["//webapps/nextjs_example:__subpackages__"],
    deps = [
        "//webapps/nextjs_example:node_modules/@types/react",
        "//webapps/nextjs_example:node_modules/@types/react-dom",
        "//webapps/nextjs_example:node_modules/next",
        "//webapps/nextjs_example/pages/api",
    ],
)
