load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "api",
    srcs = ["hello.ts"],
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "//webapps/nextjs_example:tsconfig",
    visibility = ["//webapps/nextjs_example/pages:__subpackages__"],
    deps = ["//webapps/nextjs_example:node_modules/next"],
)
